@@ -2,6 +2,8 @@ Changes for 0.8.6
 
 * Saved games in user.home/triplea (not .triplea) for linux and mac (sgb)
 
+* better logic for finding local ip address (sgb)
+
 Changes for 0.8.5
 
 * allow neutrals to have different unit types (sgb)
